# bootstrap

./: .gitignore  .sops.yaml  BootstrapUtils.psm1  CLAUDE.md  README.md  bootstrap.ps1  bootstrap.sh  flake.nix  windows-bootstrap.nix
.github/workflows/: ci.yml
docs/: windows-migration.md
nix/darwin/: default.nix
nix/nixos/: default.nix  wsl.nix
python/: README.md  pyproject.toml
python/src/bootstrap/: __init__.py  __main__.py  cli.py  orchestrator.py  platform.py
python/src/bootstrap/data/: __init__.py  bootstrap-secrets.sops.yaml  github_known_hosts.txt
python/src/bootstrap/lib/: __init__.py  age_ops.py  brew.py  errors.py  gh.py  git_ops.py  host_info.py  log.py  op.py  paths.py  prompts.py  registry_toml.py  runtime.py  secrets.py  sh.py  sops_ops.py  sops_yaml.py  ssh_ops.py  state.py  symlinks.py  tcc.py
python/src/bootstrap/phases/: __init__.py  base.py
python/src/bootstrap/phases/common/: __init__.py  onepassword.py  post.py  prereqs.py  register.py  ssh.py
python/src/bootstrap/phases/darwin/: __init__.py  keychain.py  onepassword.py  post.py  prereqs.py  switch.py
python/src/bootstrap/phases/linux/: __init__.py  onepassword.py  post.py  prereqs.py  switch.py
python/src/bootstrap/phases/nixos/: __init__.py  onepassword.py  post.py  prereqs.py  switch.py
python/src/bootstrap/phases/windows/: __init__.py
python/tests/unit/: test_platform.py  test_registry_toml.py  test_smoke.py  test_sops_yaml.py  test_ssh_config_merge.py
scripts/: ci-test-register.sh
secrets/: phase0.yaml
tests/nixos-e2e/: bootstrap-for-test.nix  default.nix  fixture.nix  mock-gh.nix  post-switch-module.nix
