[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bootstrap"
version = "0.1.0"
description = "Typed bootstrap CLI for jacobbrugh/dotfiles — splits fresh-machine setup into independent idempotent phases"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jacob Brugh" }]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "questionary>=2.0",
  "tomlkit>=0.13",
  "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "ruff>=0.6",
  "pytest>=8",
]

[project.scripts]
bootstrap              = "bootstrap.cli:main"
bootstrap-prereqs      = "bootstrap.cli:phase_prereqs"
bootstrap-onepassword  = "bootstrap.cli:phase_onepassword"
bootstrap-ssh          = "bootstrap.cli:phase_ssh"
bootstrap-register     = "bootstrap.cli:phase_register"
bootstrap-switch       = "bootstrap.cli:phase_switch"
bootstrap-post         = "bootstrap.cli:phase_post"

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap"]

# No package data. Sops-encrypted files under the repo-root `secrets/`
# are *not* bundled in the wheel — sops-nix / sops-nix-darwin at Phase 0
# activation is the only consumer. See `lib/secrets.py`.

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/bootstrap", "tests"]
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "possibly-undefined"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ANN", "TID"]
ignore = [
  "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "SIM"]
